--- a/tex/main.tex
+++ b/tex/main.tex
@@ -60,15 +60,20 @@
   Diavola/diavola.jpg,
   DuckFlames/duck_flames.png,
   DuckShy/duck_shy.png,
+  Formation/Formation_Recherche_Reproductible.png,
+  FRBCESAB/FRB-CESAB.jpg,
+  GdREcoStat/GdR_EcoStat.jpg,
   GithubLogo/github_logo.png,
   GitIcon/git_icon.png,
   GitlabLogo/gitlab_logo.png,
   GitLogo/git_logo.png,
   Hazard/hazard.png,
   Heart/heart.jpg,
+  ISEM/ISEM.png,
   Margherita/margherita.png,
   Marinara/marinara.jpg,
   Matrix/matrix.jpeg,
+  MBB/mbb.png,
   MyMachine/my_machine.png,
   NotAlone/notalone.png,
   NowWhat/now_what.jpeg,
@@ -115,10 +120,40 @@
 \renewcommand{\PageNumText}{<nopagenum>}
 \Step[bare]{0/0}{
 
-\IntensiveCoordinates{Screen}{c}{0, .4}
+\IntensiveCoordinates{Screen}{c}{0, .5}
 \node[scale=12, Dark4] (git) at (c) {\sf \textbf{git}};
 \node[below=8 of git, scale=6, Dark4] (fs) {\textbf{from scratch}};
 \node[below=12 of fs] (logo) {\PicGitIcon{9cm}{!}};
+
+\IntensiveCoordinates{Screen}{c}{-.95, -.95}
+\node[anchor=south west] (gdr) at (c) {\PicGdREcoStat{!}{6cm}};
+\IntensiveCoordinates{Screen}{c}{-.15, -.99}
+\node[anchor=south] (cesab) at (c) {\PicFRBCESAB{!}{7cm}};
+\IntensiveCoordinates{Screen}{c}{+.95, -.88}
+\node[anchor=south east] (isem) at (c) {\PicISEM{!}{2.5cm}};
+\AutomaticCoordinates{c}{$(isem.north east) + (0, 4)$}
+\node[anchor=south east] (mbb) at (c) {\PicMBB{!}{2.5cm}};
+
+\IntensiveCoordinates{Screen}{c}{-.95, +.97}
+\node[anchor=north west] (form) at (c) {\PicFormation{4cm}{!}};
+
+\IntensiveCoordinates{form}{c}{1, .3}
+\node[scale=3, right=5 of c, anchor=base west, Dark2] (form-name)
+  {Bonnes pratiques pour une recherche reproductible en écologie numérique.};
+\node[scale=3, below=13 of form-name.base west, anchor=base west, Dark2]
+  {Montpellier, 20 novembre 2023};
+
+\AutomaticCoordinates{c}{$(isem.north west) + (-10, 13)$}
+\node[scale=3.5, anchor=base west, Dark3] at (c) {Iago Bonnici};
+
+\begin{pgfonlayer}{background}%
+  \coordinate[below=5 of form.south] (pad);
+  \coordinate (epspad) at (2*\eps, 2*\eps);
+  \coordinate (loweps) at ($(Screen.south west) + (epspad)$);
+  \coordinate (upeps) at ($(Screen.north east) - (epspad)$);
+  \fill[Light2] (loweps|-pad) rectangle (upeps);
+  \draw[Light5, line width=1] (loweps|-pad) -- (upeps|-pad);
+\end{pgfonlayer}
 
 } % ENDSLIDE
 
