Add GdR EcoStat logo.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -60,6 +60,7 @@
   DuckShy/duck_shy.png,
   Formation/Formation_Recherche_Reproductible.png,
   FRBCESAB/FRB-CESAB.jpg,
+  GdREcoStat/GdR_EcoStat.jpg,
   GithubLogo/github_logo.png,
   GitIcon/git_icon.png,
   GitlabLogo/gitlab_logo.png,
@@ -115,18 +116,20 @@
 \renewcommand{\PageNumText}{<nopagenum>}
 \Step[bare]{0/0}{
 
-\IntensiveCoordinates{Screen}{c}{0, .4}
+\IntensiveCoordinates{Screen}{c}{0, .5}
 \node[scale=12, Dark4] (git) at (c) {\sf \textbf{git}};
 \node[below=8 of git, scale=6, Dark4] (fs) {\textbf{from scratch}};
 \node[below=12 of fs] (logo) {\PicGitIcon{9cm}{!}};
 
-\IntensiveCoordinates{Screen}{c}{-.99, -.99}
-\node[anchor=south west] (cesab) at (c) {\PicFRBCESAB{!}{7cm}};
-\IntensiveCoordinates{Screen}{c}{+.97, 0}
-\node[anchor=east] (isem) at (cesab -| c) {\PicISEM{!}{3cm}};
+\IntensiveCoordinates{Screen}{c}{-.95, -.95}
+\node[anchor=south west] (gdr) at (c) {\PicGdREcoStat{!}{6cm}};
+\IntensiveCoordinates{Screen}{c}{-.15, -.99}
+\node[anchor=south] (cesab) at (c) {\PicFRBCESAB{!}{7cm}};
+\IntensiveCoordinates{Screen}{c}{+.95, -.85}
+\node[anchor=south east] (isem) at (c) {\PicISEM{!}{2.5cm}};
 
 \IntensiveCoordinates{Screen}{c}{-.95, +.97}
-\node[anchor=north west] (form) at (c) {\PicFormation{5cm}{!}};
+\node[anchor=north west] (form) at (c) {\PicFormation{4cm}{!}};
 
 \IntensiveCoordinates{form}{c}{1, .3}
 \node[scale=3, right=5 of c, anchor=base west, Dark2] (form-name)
