--- a/tex/diff.tex
+++ b/tex/diff.tex
@@ -78,77 +78,94 @@
 % Phantom icon, useful for alignment.
 \newcommand{\PhantomSign}{\phantom{\usebox{\PlusBox}}}
 
-% [mode][anchor][name][line spacing]{location}{name}{mod/lines}{epilog}
-\NewDocumentCommand{\Diff}{ O{0} O{center} O{file} O{5} m m m +m }{
+% [mode][name][line spacing]{location}{name}{mod/lines}{epilog}
+\NewDocumentCommand{\Diff}{ O{0} O{file} O{5} m m m +m }{
+
   % Not exactly the corner we expect, but at least the one of first line.
+  \AutomaticCoordinates{#2}{#4}
 
-  \AutomaticCoordinates{#3}{#5}
-  \node[anchor=#2] (#3) at (#3) {\tikz{
-
-    % Scope the lines to calculate their bounding box.
-      \begin{scope}[local bounding box=fileview,
-                    every node/.style={scale=\CodeScale}]
-
-        \foreach \mod/\line [count=\i] in {#7} {\ifcsempty{mod}{}{
-          % Define this for \dhi.
-          \def\DiffBackgroundCol{\ifdefstring{\mod}{+}{fill=plus}
-                                {\ifdefstring{\mod}{-}{fill=minus}
-                                {\ifdefstring{\mod}{0}{fill=none}
-                                {\ifdefstring{\mod}{m}{fill=modified}
-                                {}}}}} % For \dhi.
+  \begin{scope}[every node/.style={scale=\CodeScale}]
+      \foreach \mod/\line [count=\i] in {#6} {\ifcsempty{mod}{}{
+        % Define this for \dhi.
+        \def\DiffBackgroundCol{\ifdefstring{\mod}{+}{fill=plus}
+                              {\ifdefstring{\mod}{-}{fill=minus}
+                              {\ifdefstring{\mod}{0}{fill=none}
+                              {\ifdefstring{\mod}{m}{fill=modified}
+                              {}}}}} % For \dhi.
+        \ifnumcomp{\i}{=}{1}{
           % First line has special positionning.
-          \ifnumcomp{\i}{=}{1}{
-            \node[anchor=north west,\mod] (line-1) {\Code{\line}};
-          }{
-            \tikzmath{\prev = int(\i - 1);}
-            \node[below=#4 of line-\prev.base west, \mod,
-              anchor=base west]
+          \node[anchor=base west,\mod,
+                alias=#2-line-1,
+                alias=last-line,
+                alias=#2-last-line,
+                alias=widest-line,
+                alias=#2-widest-line]
+            (line-1) at (#2) {\Code{\line}};
+        }{
+          \tikzmath{\prev = int(\i - 1);}
+          \node[below=#3 of last-line.base west, \mod, anchor=base west,
+                alias=#2-line-\i,
+                alias=last-line,
+                alias=#2-last-line]
                 (line-\i) {\Code{\line}};
+          % Keep track which line is the widest.
+          \tikzmath{
+            coordinate \w, \e, \W, \E;
+            \w = (last-line.base west);
+            \e = (last-line.base east);
+            \W = (widest-line.base west);
+            \E = (widest-line.base east);
+            \d = \ex - \wx;
+            \D = \Ex - \Wx;
+            \greater = \D < \d;
           }
-        }}
+          \ifdefstring{\greater}{1}{
+            \node also [alias=widest-line, alias=#2-widest-line] (last-line);
+          }
+        }
+      }}
+  \end{scope}
 
-    % File background.
-    \begin{pgfonlayer}{background}
-    \draw[fill=Light2] ($(fileview.south west) - (\CodeMargins, \CodeMargins)$) rectangle
-      ($(fileview.north east) + (\CodeMargins, \CodeMargins)$);
-    \end{pgfonlayer}
+  % File background.
+  \begin{pgfonlayer}{background}
+    \coordinate (pad) at (\CodeMargins, \CodeMargins);
+    \coordinate (lo) at ($(last-line.south west) - (pad)$);
+    \coordinate (up) at ($(widest-line.east |- line-1.north) + (pad)$);
+    \node[draw, fill=Light2, fit=(lo)(up), alias=#2-content] (content) {};
+  \end{pgfonlayer}
 
-    \end{scope}
+  % Setup file name label.
+  \node[above=\FileNameMargins+\CodeMargins of line-1.north west,
+        scale=\FileNameScale, anchor=south west, alias=#2-filename-label, #1]
+        (filename-label) {\Code{#5}};
+  \coordinate (pad) at (\FileNameMargins, \FileNameMargins);
+  \coordinate (lower) at ($(filename-label.south west) - (pad)$);
+  \coordinate (upper) at ($(filename-label.north east) + (pad)$);
+  \node[draw, fit={(lower) (upper)}, alias=#2-filename] (filename) {};
+  \begin{pgfonlayer}{background}
+    \fill[white] ($(lower) + (0, \eps)$) rectangle (upper);
+  \end{pgfonlayer}
+  \node[anchor=base east] at ($(filename-label.base west) + (-\SignOffset, .5)$)
+    {\ifstrequal{#1}{0}{\PhantomSign}
+    {\ifstrequal{#1}{m}{\Tilde}
+    {\ifstrequal{#1}{c}{\Lightning}
+    {\ifstrequal{#1}{+}{\Plus}{\Minus}}}}};
 
-    % Setup file name label.
-      \node[above=\FileNameMargins+\CodeMargins of line-1.north west,
-            scale=\FileNameScale, anchor=south west, #1]
-        (filename) {\Code{#6}};
-    \coordinate (pad) at (\FileNameMargins-\eps, \FileNameMargins);
-    \coordinate (lower) at ($(filename.south west) - (pad)$);
-    \coordinate (upper) at ($(filename.north east) + (pad)$);
-    \draw (lower) -- (lower |- upper) -- (upper) -- (upper |- lower);
-    \begin{pgfonlayer}{background}
-      \fill[white] ($(lower) + (0, \eps)$) rectangle (upper);
-    \end{pgfonlayer}
-    \node[anchor=base east] at ($(filename.base west) + (-\SignOffset, .5)$)
-      {\ifstrequal{#1}{0}{\PhantomSign}
-      {\ifstrequal{#1}{m}{\Tilde}
-      {\ifstrequal{#1}{c}{\Lightning}
-      {\ifstrequal{#1}{+}{\Plus}{\Minus}}}}};
+  % Second pass to append diff signs.
+  \foreach \sign/\line [count=\i] in {#6} {\ifcsempty{sign}{}{
+    \node[left=\SignOffset of line-\i.base west, anchor=base east]
+      (sign-\i)
+      {\ifdefstring{\sign}{0}{\PhantomSign}
+      {\ifdefstring{\sign}{m}{\Tilde}
+      {\ifdefstring{\sign}{c}{\Lightning}
+      {\ifdefstring{\sign}{+}{\Plus}
+      {\ifdefstring{\sign}{-}{\Minus}{}}}}}};
+  }}
 
-    % Second pass to append diff signs.
-    \foreach \sign/\line [count=\i] in {#7} {\ifcsempty{sign}{}{
-      \node[left=\SignOffset of line-\i.base west, anchor=base east]
-        {\ifdefstring{\sign}{0}{\PhantomSign}
-        {\ifdefstring{\sign}{m}{\Tilde}
-        {\ifdefstring{\sign}{c}{\Lightning}
-        {\ifdefstring{\sign}{+}{\Plus}
-        {\ifdefstring{\sign}{-}{\Minus}{}}}}}};
-    }}
-
-  % Epilog commands to be executed within the context of this local picture.
-  % TODO: no sub-tikz should be used,
-  % but this would need to reposition all diffed files.
-  #8
-
-  }};
-
+  % Construct one total bounding box node.
+  \coordinate (lo) at (sign-1.west |- content.south);
+  \coordinate (up) at (content.east |- filename.north);
+  \node[fit=(lo)(up)] (#2) {};
 
 }
 
