Consider `main` locked and push to `dev`.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -56,6 +56,7 @@
   Calzone/calzone.png,
   Capricciosa/capricciosa.png,
   ConsoleGit/console_git.png,
+  Contact/contact.png,
   Diavola/diavola.jpg,
   DuckFlames/duck_flames.png,
   DuckShy/duck_shy.png,
@@ -69,6 +70,7 @@
   Marinara/marinara.jpg,
   Matrix/matrix.jpeg,
   MyMachine/my_machine.png,
+  NotAlone/notalone.png,
   NowWhat/now_what.jpeg,
   OMG/omg.png,
   PullRequestButton/pull_request_button.jpg,
