Replace github by gitlab in examples.

--- a/tex/repo.tex
+++ b/tex/repo.tex
@@ -256,7 +256,7 @@
     {\UrlHighlight{url hi}{#5}}
     {\UrlHighlight{url}{#5}}}
   \AutomaticCoordinates{c}{#3}
-  \node[remote label, anchor=#2] at (c) {\Code{https://github.com/\account/\name}};
+  \node[remote label, anchor=#2] at (c) {\Code{https://gitlab.com/\account/\name}};
 }}
 
 
