--- a/tex/main.tex
+++ b/tex/main.tex
@@ -318,7 +318,7 @@
   }
 
   \begin{scope}[local to=Canvas]\begin{pgfonlayer}{background}
-    \node[opacity=.15] (github) at (0, .5) {\PicGithubLogo{10cm}{!}};
+    \node[opacity=.15] (website) at (0, .5) {\PicGitlabLogo{10cm}{!}};
     \node[opacity=.15] (mymachine) at (-.7, -.6) {\PicMyMachine{75mm}{!}};
     \node[opacity=.15] (theirmachine) at (+.7, -.6) {\PicTheirMachine{75mm}{!}};
   \end{pgfonlayer}\end{scope}
