Fix silent \Diff{} epilog.

--- a/tex/diff.tex
+++ b/tex/diff.tex
@@ -167,6 +167,9 @@
   \coordinate (up) at (content.east |- filename.north);
   \node[fit=(lo)(up)] (#2) {};
 
+  % Epilog
+  #7
+
 }
 
 % Highlight changed content in diffed line (uses \CurrentMod)
