--- a/tex/main.tex
+++ b/tex/main.tex
@@ -141,7 +141,7 @@
 \node[scale=3, right=5 of c, anchor=base west, Dark2] (form-name)
   {Bonnes pratiques pour une recherche reproductible en écologie numérique.};
 \node[scale=3, below=13 of form-name.base west, anchor=base west, Dark2]
-  {Montpellier, 20 novembre 2023};
+  {Montpellier, 2 décembre 2024};
 
 \AutomaticCoordinates{c}{$(isem.north west) + (-10, 13)$}
 \node[scale=3.5, anchor=base west, Dark3] at (c) {Iago Bonnici};
